tests/ui/db_option_misses_value.stderr
error: backend option has no value set
 --> tests/ui/db_option_misses_value.rs:3:14
  |
3 | #[dbstruct(db=)]
  |              ^
  |
  = help: try setting a supported backend, for example `db=sled`
